etc/docker/kubernetes/030_deploy.yaml
################################################################################
##      Copyright (C) 2020        Sebastian Francisco Colomar Bauza           ##
##      Copyright (C) 2020        Alejandro Colomar Andrés                    ##
##      SPDX-License-Identifier:  GPL-2.0-only                                ##
################################################################################

apiVersion: apps/v1
kind: Deployment
metadata:
    name: www-deploy
spec:
    replicas: 1
    selector:
        matchLabels:
            app: www-label
    template:
        metadata:
            name: www-pod
            labels:
                app: www-label
        spec:
            containers:
            -
                image: "alejandrocolomar/www:0.33.0"
                livenessProbe:
                    httpGet:
                        path: /
                        port: 8080
                    initialDelaySeconds: 30
                name: www-container
                ports:
                -
                    containerPort: 8080
                readinessProbe:
                    httpGet:
                        path: /
                        port: 8080
                    initialDelaySeconds: 1
#                resources:
#                    limits:
#                        cpu: '0.001'
#                        memory: '32Mi'
#                    requests:
#                        cpu: '0.001'
#                        memory: '16Mi'
                volumeMounts:
                -
                    mountPath: /etc/nginx/conf.d/security-parameters.conf
                    name: etc-nginx-conf-d-security-parameters-conf-www-volume
                    readOnly: true
                    subPath: security-parameters.conf
                -
                    mountPath: /etc/nginx/conf.d/server.conf
                    name: etc-nginx-conf-d-server-conf-www-volume
                    readOnly: true
                    subPath: server.conf
                -
                    mountPath: /var/cache/nginx/
                    name: var-cache-nginx-www-volume
                -
                    mountPath: /var/log/nginx/
                    name: var-log-nginx-www-volume
                -
                    mountPath: /var/run/
                    name: var-run-www-volume
            volumes:
            -
                configMap:
                    name: etc-nginx-conf-d-security-parameters-conf-www-cm
                name: etc-nginx-conf-d-security-parameters-conf-www-volume
            -
                configMap:
                    name: etc-nginx-conf-d-server-conf-www-cm
                name: etc-nginx-conf-d-server-conf-www-volume
            -
                emptyDir: {}
                name: var-cache-nginx-www-volume
            -
                emptyDir: {}
                name: var-log-nginx-www-volume
            -
                emptyDir: {}
                name: var-run-www-volume
