etc/docker/kubernetes/deploy.yaml
################################################################################
##      Copyright (C) 2020        Sebastian Francisco Colomar Bauza           ##
##      Copyright (C) 2020        Alejandro Colomar Andrés                    ##
##      SPDX-License-Identifier:  GPL-2.0-only                                ##
################################################################################

apiVersion: apps/v1
kind: Deployment
metadata:
    name: deploy.www
spec:
    replicas: 1
    selector:
        matchLabels:
            app: label.www
    template:
        metadata:
            labels:
                app: label.www
        spec:
            containers:
            -
                image: "alejandrocolomar/www:0.25-rc1"
                livenessProbe:
                    httpGet:
                        path: /
                        port: 8080
                    initialDelaySeconds: 30
                name: container.www
                ports:
                -
                    containerPort: 8080
                readinessProbe:
                    httpGet:
                        path: /
                        port: 8080
                    initialDelaySeconds: 1
#                resources:
#                    limits:
#                        cpu: '0.001'
#                        memory: '32Mi'
#                    requests:
#                        cpu: '0.001'
#                        memory: '16Mi'
                volumeMounts:
                -
                    mountPath: /usr/local/etc/nginx/conf.d/
                    name: volume.etc_nginx_conf_d.www
                    readOnly: true
                -
                    mountPath: /var/cache/nginx/
                    name: volume.var_cache_nginx.www
                -
                    mountPath: /var/log/nginx/
                    name: volume.var_log_nginx.www
                -
                    mountPath: /var/run/
                    name: volume.var_run.www
            volumes:
            -
                configMap:
                    name: cm.etc_nginx_conf_d.www
                name: volume.etc_nginx_conf_d.www
            -
                emptyDir: {}
                name: volume.var_cache_nginx.www
            -
                emptyDir: {}
                name: volume.var_log_nginx.www
            -
                emptyDir: {}
                name: volume.var_run.www
