etc/docker/kubernetes/deployment.yaml
################################################################################
##      Copyright (C) 2020        Sebastian Francisco Colomar Bauza           ##
##      Copyright (C) 2020        Alejandro Colomar Andrés                    ##
##      SPDX-License-Identifier:  GPL-2.0-only                                ##
################################################################################

apiVersion: apps/v1
kind: Deployment
metadata:
    name: deploy.www
spec:
    replicas: 1
    selector:
        matchLabels:
            app: www
    template:
        metadata:
            labels:
                app: www
        spec:
            containers:
            -
                image: "alejandrocolomar/www:0.24-a1"
                livenessProbe:
                    httpGet:
                        path: /
                        port: 8080
                    initialDelaySeconds: 10
                name: container.www
                ports:
                -
                    containerPort: 8080
                readinessProbe:
                    httpGet:
                        path: /
                        port: 8080
                    initialDelaySeconds: 1
                volumeMounts:
                -
                    mountPath: /usr/local/etc/nginx/conf.d/
                    name: volume.etc-nginx-confd.www
                    readOnly: true
                -
                    mountPath: /var/cache/nginx/
                    name: volume.var-cache-nginx.www
                -
                    mountPath: /var/log/nginx/
                    name: volume.var-log-nginx.www
                -
                    mountPath: /var/run/
                    name: volume.var-run.www
            volumes:
            -
                configMap:
                    name: cm.etc-nginx-confd.www
                name: volume.etc-nginx-confd.www
            -
                emptyDir: {}
                name: volume.var-cache-nginx.www
            -
                emptyDir: {}
                name: volume.var-log-nginx.www
            -
                emptyDir: {}
                name: volume.var-run.www
