etc/docker/kubernetes/kube-compose.yaml
################################################################################
##      Copyright (C) 2020        Sebastian Francisco Colomar Bauza           ##
##      Copyright (C) 2020        Alejandro Colomar Andrés                    ##
##      SPDX-License-Identifier:  GPL-2.0-only                                ##
################################################################################
---
apiVersion: v1
kind: Service
metadata:
    name: www-svc
spec:
    ports:
    -
        port: 8080
        nodePort: 32001
    selector:
        service: www-svc
    type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: www-deploy
spec:
    replicas: 3
    selector:
        matchLabels:
            service: www-svc
    template:
        metadata:
            labels:
                service: www-svc
        spec:
            containers:
            -
                name: www-img
                image: "alejandrocolomar/www:kube"
                volumeMounts:
                -
                    name: nginx_conf
                    mountPath: /usr/local/etc/nginx/nginx.conf
                    readOnly: true
                -
                    name: nginx_conf_security-parameters
                    mountPath: /usr/local/etc/nginx/conf.d/security-parameters.conf
                    readOnly: true
                -
                    name: nginx_conf_server
                    mountPath: /usr/local/etc/nginx/conf.d/server.conf
                    readOnly: true
            volumes:
            -
                name: nginx_conf
                configMap:
                    name: nginx_conf
            -
                name: nginx_conf_security-parameters
                configMap:
                    name: nginx_conf_security-parameters
            -
                name: nginx_conf_server
                configMap:
                    name: nginx_conf_server
---
