etc/docker/kubernetes/010_netpol.yaml
################################################################################
##      Copyright (C) 2020        Sebastian Francisco Colomar Bauza           ##
##      Copyright (C) 2020        Alejandro Colomar Andrés                    ##
##      SPDX-License-Identifier:  GPL-2.0-only                                ##
################################################################################

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    labels:
        app: www-label
    name: www-netpol
spec:
    ingress:
    -
        ports:
        -
            port: 8080
            protocol: TCP
    podSelector:
        matchLabels:
            app: www-label
    policyTypes:
    -
        Ingress
