etc/docker/kubernetes/netpol.yaml
################################################################################
##      Copyright (C) 2020        Sebastian Francisco Colomar Bauza           ##
##      Copyright (C) 2020        Alejandro Colomar Andrés                    ##
##      SPDX-License-Identifier:  GPL-2.0-only                                ##
################################################################################

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    labels:
        app: label.www
    name: netpol.www
spec:
    ingress:
    -
        ports:
        -
            port: 8080
            protocol: TCP
    podSelector:
        matchLabels:
            app: label.www
    policyTypes:
    -
        Ingress
